Remove redundant implementation.